--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html  >
 <head>
-  <!-- Site made with Mobirise Website Builder v5.3.0, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
@@ -9,7 +8,7 @@
   <meta name="description" content="">
   
   
-  <title>Strona główna/title>
+  <title>Strona główna</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -31,11 +30,11 @@
         <div class="container">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href=index.html/>
-                        <img src="assets/images/hill-hq-121x121.png" alt="OSJ"style="height: 3.8rem;">
+                    <a href="https://mobiri.se">
+                        <img src="assets/images/hill-hq-121x121.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="Rychlaczek.github.io</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">openskijumping.github.io</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -68,7 +67,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Baza skoczni i paczek zawodników do OSJ</h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Paczki zawodników, skocznie to wszystko znajdziesz na naszej stronie przekonaj się sam!</strong><br></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="hills.html">Zobacz skocznie</a> <a class="btn btn-success-outline display-4" href="index.html">Obczaj paczki zawodników</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="hills.html">Zobacz skocznie</a> <a class="btn btn-success-outline display-4" href="https://mobirise.com">Obczaj paczki zawodników</a></div>
             </div>
         </div>
     </div>
