--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1">Baza skoczni i paczek zawodników do OSJ</h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Paczki zawodników, skocznie to wszystko znajdziesz na naszej stronie przekonaj się sam!</strong><br></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="hills.html">Zobacz skocznie</a> <a class="btn btn-success-outline display-4" href="https://mobirise.com">Obczaj paczki zawodników</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-success display-4" href="hills.html">Zobacz skocznie</a> <a class="btn btn-success-outline display-4" href="main.html">Obczaj paczki zawodników</a></div>
             </div>
         </div>
     </div>
