--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
                         <img src="assets/images/hill-hq-121x121.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">Open Ski Jumping</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobiri.se">OSJ24.PL</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -83,7 +83,7 @@
         <div class="row justify-content-center">
             <div class="col-12 col-md">
                 
-                <h6 class="mbr-section-subtitle mbr-fonts-style mb-4 display-5"><strong>Bystra HS19</strong></h6>
+                <a class="btn btn-success display-4" href="bystra-hill.html">Bystra HS19</a>
             </div>
             <div class="col-md-12 col-lg-6">
                 <p class="mbr-text mbr-fonts-style display-4"><strong>Pierwsza skocznia w Bystrej Śląskiej w Bielsku-Białej została wybudowana w 1955 roku. Rekordzistą skoczni był m.in. słynny Józef Przybyła z rezultatem 26 metrów. W latach 60. XX wieku skocznia była już nienadająca się do użytku, więc w 1973 roku wybudowane zostały trzy obiekty - Szyndzielnia K-34, Kozia Górka K-24 i K-10 z matami igelitowymi. Funkcjonowały one do 1994 roku, kiedy to odbyły się ostatnie zawody w Bystrej.
