--- a/bystra-hill.html
+++ b/bystra-hill.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Bystra HS19 - OSJ Hills</title>
+  <title>Skocznia Bystra on Open Ski Jumping</title>
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -65,58 +65,8 @@
                 <blockquote>
                 <h5 class="mbr-section-title mbr-fonts-style mb-2 display-7"><strong>Bystra HS19</strong></h5>
                 <p class="mbr-text mbr-fonts-style display-4">{
-<br>    "name": "Bystra HS19",
-<br>    "terrainSteepness": 1.0,
-<br>    "type": 1,
-<br>    "gates": 12,
-<br>    "w": 18.0,
-<br>    "hS": 19.0,
-<br>    "h": 7.62,
-<br>    "n": 15.56,
-<br>    "gamma": 28.0,
-<br>    "alpha": 8.0,
-<br>    "e": 29.98,
-<br>    "es": 10.47,
-<br>    "t": 3.54,
-<br>    "r1": 28.05,
-<br>    "beta0": 5.16666651,
-<br>    "betaP": 31.0,
-<br>    "betaK": 29.8,
-<br>    "betaL": 25.8,
-<br>    "s": 0.7,
-<br>    "l1": 1.05,
-<br>    "l2": 3.4,
-<br>    "rL": 50.0,
-<br>    "r2L": 50.0,
-<br>    "r2": 50.0,
-<br>    "a": 45.0,
-<br>    "rA": 0.0,
-<br>    "betaA": 0.0,
-<br>    "b1": 1.5,
-<br>    "b2": 3.0,
-<br>    "bK": 6.0,
-<br>    "bU": 12.0,
-<br>    "d": 0.0,
-<br>    "q": 0.0,
-<br>    "gateStairsLeft": false,
-<br>    "gateStairsRight": true,
-<br>    "inrunStairsLeft": false,
-<br>    "inrunStairsRight": false,
-<br>    "inrunStairsAngle": 0.1,
-<br>    "inrunData": {
-<br>      "summerTrack": "SingleTrackGreen",
-<br>      "winterTrack": "SingleTrackGreen"
-<br>    },
-<br>    "landingAreaData": {
-<br>      "metersLow": 0,
-<br>      "metersHigh": 0,
-<br>      "summerLinesSpacing": 0,
-<br>      "summerLinesLow": 0,
-<br>      "summerLinesHigh": 0,
-<br>      "winterLinesSpacing": 0,
-<br>      "winterLinesLow": 0,
-<br>      "winterLinesHigh": 0
-<br>    }
+<br>    Pobierz skocznię Bystra HS 19 
+<a class="btn btn-success display-7" href="bystra-hill.html">Pobierz</a>
 <br>  }</p></blockquote>
             </div>
         </div>
