--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <img src="assets/images/hill-hq-121x121.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="https://mobiri.se">Open Ski Jumping.pl</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-7" href="index.html">Open Ski Jumping.pl</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
